logs/pystack.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pystack'...
Listing './lib/python3.5/site-packages/pystack/layers'...
Compiling './lib/python3.5/site-packages/pystack/layers/tcp_session.py'...
***   File "./lib/python3.5/site-packages/pystack/layers/tcp_session.py", line 383
    print "Send RST state:", str(self.state)
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pystack/nfqueue_utils.py'...
***   File "./lib/python3.5/site-packages/pystack/nfqueue_utils.py", line 50
    print "thread stopping"
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pystack/pystack_socket.py'...
***   File "./lib/python3.5/site-packages/pystack/pystack_socket.py", line 80
    def bind(self, (host, port)):
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pystack-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
